--- a/WpfApplication1 (3)/WpfApplication1/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1 (3)/WpfApplication1/WpfApplication1/MainWindow.xaml
@@ -36,26 +36,27 @@
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
         <TextBlock Margin="5" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" FontSize="20" Style="{StaticResource TextBlockStyle}">Ваше имя</TextBlock>
-        <TextBox Grid.Row="0" Grid.Column="1" Margin="5" Style="{StaticResource TextBoxStyle}"></TextBox>
+        <TextBox x:Name="UserName" Grid.Row="0" Grid.Column="1" Margin="5" Style="{StaticResource TextBoxStyle}" Text="{Binding Name}" ></TextBox>
         <TextBlock Margin="5" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" FontSize="20" Style="{StaticResource TextBlockStyle}">Email</TextBlock>
-        <TextBox Margin="5" Grid.Row="1" Grid.Column="1" Style="{StaticResource TextBoxStyle}"></TextBox>
-        <TextBlock Margin="5" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" FontSize="20" Style="{StaticResource TextBlockStyle}">Телефон</TextBlock>
+        <TextBox x:Name="UserEmail" Margin="5" Grid.Row="1" Grid.Column="1" Style="{StaticResource TextBoxStyle}" Text="{Binding Email}"></TextBox>
+        <TextBlock x:Name="UserPhone" Margin="5" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" FontSize="20" Style="{StaticResource TextBlockStyle}">Телефон</TextBlock>
         <TextBlock Margin="5" Grid.Row="5" Grid.Column="0" VerticalAlignment="Center" FontSize="20" Grid.ColumnSpan="2" Style="{StaticResource TextBlockStyle}">Описание проблемы</TextBlock>
-        <TextBox Margin="5" Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource TextBoxStyle}"></TextBox>
+        <TextBox Margin="5" Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource TextBoxStyle}" Text="{Binding Problem}"></TextBox>
         <TextBlock Margin="5" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center" FontSize="20" Style="{StaticResource TextBlockStyle}">Раздел</TextBlock>
         <TextBlock Margin="5" Grid.Row="4" Grid.Column="0" VerticalAlignment="Center" FontSize="20" Style="{StaticResource TextBlockStyle}">Категория</TextBlock>
         <TextBlock Margin="5" Grid.Row="7" Grid.Column="0" VerticalAlignment="Center" FontSize="20" Style="{StaticResource TextBlockStyle}">Приложить файл</TextBlock>
         <Grid Grid.Row="2" Grid.Column="1">
-            <TextBox Margin="5" Grid.Column="0" Grid.Row="0" Style="{StaticResource TextBoxStyle}"></TextBox>
-            <TextBox Grid.Column="0" Grid.Row="0" Style="{StaticResource TextBoxStyle}">
-                <Binding Path="Number">
-                    <Binding.ValidationRules>
-                        <local:NumberValidationRule></local:NumberValidationRule>
-                    </Binding.ValidationRules>
-                </Binding>
-            </TextBox>
-            <TextBlock Margin="5" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center" FontSize="20" Style="{StaticResource TextBlockStyle}">Дата события</TextBlock>
-            <DatePicker Margin="5" Grid.Column="2" Grid.Row="0" VerticalAlignment="Center" FontSize="20" Style="{StaticResource DateStyle}"></DatePicker>
+            <TextBox Margin="5" Grid.Column="0" Grid.Row="0" Style="{StaticResource TextBoxStyle}" Text="{Binding Number}"></TextBox>
+            <TextBlock Margin="5" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center" FontSize="20" Style="{StaticResource TextBlockStyle}"><Run Text="Дата события"/><InlineUIContainer>
+                    <TextBox Style="{StaticResource TextBoxStyle}" Height="73" Width="155">
+                        <Binding Path="Number">
+                            <Binding.ValidationRules>
+                                <local:NumberValidationRule/>
+                            </Binding.ValidationRules>
+                        </Binding>
+                    </TextBox>
+                </InlineUIContainer></TextBlock>
+            <DatePicker Margin="5" Grid.Column="2" Grid.Row="0" VerticalAlignment="Center" FontSize="20" Style="{StaticResource DateStyle}" SelectedDate="{Binding Date}"></DatePicker>
             <Grid.RowDefinitions>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
@@ -80,7 +81,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
-            <ComboBox Margin="5,5,0,4.5" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Left" Width="451" Style="{StaticResource ComboBoxStyle}"></ComboBox>
+            <ComboBox Margin="5,5,0,4.5" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Left" Width="451" Style="{StaticResource ComboBoxStyle}" ItemsSource="{Binding Sections}"></ComboBox>
         </Grid>
         <Grid Grid.Row="4" Grid.Column="1">
             <Grid.ColumnDefinitions>
@@ -91,11 +92,11 @@
             <Grid.RowDefinitions>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
-            <ComboBox Margin="5,5,78,5" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource ComboBoxStyle}" SelectedItem="{Binding SelectedSection}" ItemsSource="{ Binding Sections}"></ComboBox>
+            <ComboBox Margin="5,5,78,5" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource ComboBoxStyle}" SelectedItem="{Binding SelectedSection}" ItemsSource="{ Binding Categories}"></ComboBox>
         </Grid>
         <DockPanel Grid.Row="7" Grid.Column="1">
             <Button Margin="5" DockPanel.Dock="Right" Width="70" FontSize="29" Style="{StaticResource ButtonStyle}">...</Button>
-            <TextBox Margin="5" DockPanel.Dock="Left" Width="368" Style="{StaticResource TextBoxStyle}"></TextBox>
+            <TextBox Margin="5" DockPanel.Dock="Left" Width="368" Style="{StaticResource TextBoxStyle}" Text="{Binding FilePath}"></TextBox>
         </DockPanel>
         <Grid Grid.Row="8" Grid.Column="1">
             <Grid.RowDefinitions>
@@ -106,6 +107,6 @@
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
         </Grid>
-        <Button Style="{StaticResource ButtonStyle}" Margin="256.5,10,9,10.5" Grid.Row="8" Grid.Column="1" VerticalAlignment="Center" FontSize="20" Height="52">Отправить</Button>
+        <Button Command="{Binding ClickCommand}" Style="{StaticResource ButtonStyle}" Margin="256.5,10,9,10.5" Grid.Row="8" Grid.Column="1" VerticalAlignment="Center" FontSize="20" Height="52" Click="Button_Click" >Отправить</Button>
     </Grid>
 </Window>
